--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "scripts": {
     "test": "gulp test"
   },
+  "devDependencies": {
+    "del": "2.1.0",
+    "gulp": "3.9.0",
+    "gulp-karma": "0.0.5",
+    "gulp-livereload": "3.8.1",
+    "gulp-serve": "1.2.0",
+    "jasmine-core": "2.3.4",
+    "karma": "0.13.15",
+    "karma-chrome-launcher": "0.2.1",
+    "karma-jasmine": "0.3.6"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/fealaer/realine-test-spa.git"
