--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,10 @@
     "test",
     "tests"
   ],
-  "directory": "app/bower_components/",
+  "directory": "src/bower_components/",
   "dependencies": {
     "angular": "~1.4.7",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-route": "~1.4.7"
   }
 }
