--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "del": "2.1.0",
     "gulp": "3.9.0",
+    "gulp-connect": "2.2.0",
     "gulp-karma": "0.0.5",
     "gulp-livereload": "3.8.1",
     "gulp-serve": "1.2.0",
