--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "angular": "1.4.7",
     "bootstrap": "3.3.5",
-    "angular-route": "1.4.7",
-    "angular-messages": "1.4.7"
+    "angular-messages": "1.4.7",
+    "angular-ui-router": "ui-router#0.2.15"
   }
 }
